fixed wierd one pixel sticking out in progress bar

--- a/sass/blocks/_fixed-bar.scss
+++ b/sass/blocks/_fixed-bar.scss
@@ -88,7 +88,7 @@
             position: relative;
             &:after {
                 content: ' ';
-                height: 3px;
+                height: 2px;
                 width: 1px;
                 display: block;
                 background: $hrld-blue;
